feat: add full-screen image viewer with download functionality

--- a/index.html
+++ b/index.html
@@ -336,6 +336,24 @@
     <video class="lightbox-video" controls></video>
   </template>
 
+  <!-- 全屏图片查看器 -->
+  <template id="image-viewer-template">
+    <div class="image-viewer">
+      <div class="image-viewer-backdrop"></div>
+      <div class="image-viewer-toolbar">
+        <button class="image-viewer-btn image-viewer-close" title="关闭">×</button>
+        <button class="image-viewer-btn image-viewer-download" title="下载图片">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4M7 10l5 5 5-5M12 15V3"/>
+          </svg>
+          <span class="image-viewer-btn-text">下载图片</span>
+        </button>
+      </div>
+      <img class="image-viewer-image" alt="全屏查看">
+      <a class="image-viewer-download-link" style="display: none;"></a>
+    </div>
+  </template>
+
   <template id="lightbox-info-template">
     <div class="lightbox-info"></div>
   </template>
