add legacy notice and sidebar subtitle; update styles for better visibility

--- a/index.html
+++ b/index.html
@@ -187,13 +187,14 @@
           </div>
         </div>
         <p class="blur-disclaimer">不知道为什么，鼠标悬停在卡片上时会导致文字模糊，问了AI很久都没有解决。</p>
+        <p class="legacy-notice">本页面所有作品均为遗作，因为只靠完全自愿的赞助支持活下去是并不现实的，所以我将在未来某刻死去。</p>
         <div class="works-grid" id="projects-grid"></div>
       </div>
     </div>
   </template>
 
   <template id="art-world-template">
-    <div id="art-world">
+    <div id="art-world">  
       <canvas class="world-canvas" id="art-canvas"></canvas>
       <div class="world-content">
         <h2 class="world-title">🎨 美术作品</h2>
@@ -240,6 +241,7 @@
       <div class="sidebar-title">
         <span class="sidebar-icon">💝</span> 赞助支持
       </div>
+      <div class="sidebar-subtitle">（完全自愿）</div>
       <div class="qrcode-container"></div>
 
       <!-- 底部装饰 HUD -->
@@ -414,6 +416,7 @@
         <div class="sidebar-title">
           <span class="sidebar-icon">💝</span> 赞助支持
         </div>
+        <div class="sidebar-subtitle">（完全自愿）</div>
         <div class="qrcode-container"></div>
       </aside>
     </section>
