--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           </div>
         </div>
         <p class="blur-disclaimer">不知道为什么，鼠标悬停在卡片上时会导致文字模糊，问了AI很久都没有解决。</p>
-        <p class="legacy-notice">本页面所有作品均为遗作，因为只靠完全自愿的赞助支持活下去是并不现实的，所以我将在未来某刻死去。</p>
+        <p class="legacy-notice">本页面所有作品均为遗作，因为只靠完全自愿的赞助支持活下去是并不现实的，所以我活不久。</p>
         <div class="works-grid" id="projects-grid"></div>
       </div>
     </div>
